<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.game.fragments.GameFragment">

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/GameImage" />

    <ImageView
        android:id="@+id/GameImage"
        android:layout_width="270dp"
        android:layout_height="545dp"
        android:contentDescription="@string/app_name"
        android:horizontalSpacing="0dp"
        android:numColumns="10"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <GridView
        android:id="@+id/GameGrid"
        android:layout_width="275dp"
        android:layout_height="550dp"
        android:alpha="0.8"
        android:horizontalSpacing="0dp"
        android:numColumns="10"
        android:verticalSpacing="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameGrid">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/RotateLeft"
                style="@style/rotatebuttonspadding"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/RotateLeftDesc"
                app:backgroundTint="@color/black_buttons"
                app:icon="@drawable/rotateleft"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/RotateRight"
                style="@style/rotatebuttonspadding"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/RotateRightDesc"
                app:backgroundTint="@color/black_buttons"
                app:icon="@drawable/rotateright"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="40dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/LeftButton"
                style="@style/movebuttonspadding"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/LeftButtonDesc"
                app:backgroundTint="@color/black_buttons"
                app:icon="@drawable/left"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/DownButton"
                style="@style/movebuttonspadding"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/DownButtonDesc"
                app:backgroundTint="@color/black_buttons"
                app:icon="@drawable/down"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/RightButton"
                style="@style/movebuttonspadding"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/RightButtonDesc"
                app:backgroundTint="@color/black_buttons"
                app:icon="@drawable/right"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />
        </LinearLayout>
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/game_ad"
            android:foregroundGravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-9667420067790140/3716965643" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/GameGrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread">

        <!-- NextBlockImage keeps an explicit 60x45dp size and is set via setImageResource() in
             GameFragment.kt; a compound drawable would tie its size to the drawable's intrinsic
             bounds instead, so the suggested merge is skipped. -->
        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/nextBlockText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NextBlock"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/NextBlockImage"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:contentDescription="@string/NextBlockDesc" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pauseButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linearLayout8"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/PointsTextString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PointsText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/PointsText"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textSize="25sp" />
        </LinearLayout>


        <com.batodev.tetris.presentation.game.PlayPauseView
            android:id="@+id/pauseButton"
            android:layout_width="52dp"
            android:layout_height="43dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.432" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>